setting up environment variables and database connection

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Jayant Shrivastava and Damian Reiter",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33"
+    "mongoose": "^4.12.3"
   }
 }
