--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongoose": "^4.12.3"
+    "method-override": "^2.3.10",
+    "mongoose": "^4.12.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1"
   }
 }
